# seagull

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  rusty-hook.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  init.rs  main.rs  migrate.rs  poop.rs
tests/: cli.rs  migrate.rs  poop.rs  utils.rs
tests/fixtures/migrations_all_unapplied/: V2__create.sql
tests/fixtures/migrations_some_unapplied/: V3_create_dogs_table.sql  V4_create_cats_table.sql
