[package]
name = "seagull"
version = "0.1.0"
authors = ["Thanh Doan <tmdoan98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"

chrono = "0.4"
termcolor = "1.1"
colored = "1.9"

toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }

postgres = "0.17.2"

[dev-dependencies]
tempfile = "3"
rusty-hook = "^0.11.1"
assert_cmd = "1.0.1"
predicates = "1"