[package]
name = "seagull"
version = "0.1.0"
authors = ["Thanh Doan <tmdoan98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.13"
colored = "1.9"
postgres = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"

[dev-dependencies]
tempfile = "3"
rusty-hook = "^0.11.1"
assert_cmd = "1.0.1"
predicates = "1"