[package]
name = "seagull"
description = "Simple PostgreSQL migration tool"
version = "0.1.0"
authors = ["Thanh Doan <tmdoan98@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Wahuh/seagull"
keywords = ["database", "sql", "migrations", "postgres", "postgresql"]
categories = ["database"]

[dependencies]
anyhow = "1.0"
structopt = "0.3.13"
colored = "1.9"
postgres = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"

[dev-dependencies]
tempfile = "3"
rusty-hook = "^0.11.1"
assert_cmd = "1.0.1"
predicates = "1"